--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <title>FeWo-direkt</title>
-    <ul style="list-style-type:square">
-        <li>App herunterladen</li>
-        <li>Reiseplaner</li>
-        <li>Unterkunft registrieren</li>
-        <li>Hilfe</li>
-        <li>Mein Reisen</li>
-        <li>Anmelden</li>
-    </ul>
+    <div class="topnav">
+        <div class="appTitle">
+           <h1><a href="">FeWo-direkt</a></h1> 
+        </div>
+        <div class="menus"><a href="">App herunterladen</a>
+            <a href="">Reiseplaner</a>
+            <a href="">Unterkunft registrieren</a>
+            <a href="">Hilfe</a>s
+            <a href="">Mein Reisen</a>
+            <a href="">Anmelden</a></div>
+    </div>
     <body>
-        <h1>Hello world</h1>
+        
     </body>
 </html>
