First image added

--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
         <div class="appTitle">
            <h1><a href="">FeWo-direkt</a></h1> 
         </div>
-        <div class="menus"><a href="">App herunterladen</a>
+        <div class="menus">
+            <button class="download_button">
+                <a href="">App herunterladen</a>
+            </button>
             <a href="">Reiseplaner</a>
             <a href="">Unterkunft registrieren</a>
-            <a href="">Hilfe</a>s
+            <a href="">Hilfe</a>
             <a href="">Mein Reisen</a>
             <a href="">Anmelden</a></div>
     </div>
     <body>
-        
+        <div class="image_father_girl">
+            <img src="images/image_father_and_girl.jpg" alt="reading">
+        </div>
     </body>
 </html>
