--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
             <a href="">Anmelden</a></div>
     </div>
     <body>
-        <div class="image_father_girl">
-            <img src="images/image_father_and_girl.jpg" alt="reading">
+        <div class="mini_body">
+            <div class="Alles_gut">
+                <h2>Alles gut, du buchst bei FeWo-direkt</h2>
+            </div>
         </div>
     </body>
 </html>
