--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <body>
         <div class="mini_body">
             <div class="Alles_gut">
-                <h2>Alles gut, du buchst bei FeWo-direkt</h2>
+                <h1>Alles gut, du buchst bei FeWo-direkt</h1>
+            </div>
+
+            <div class="card">
+                <p>This is a card</p>
             </div>
         </div>
     </body>
